--- a/src/Labs/Lab2/index.css
+++ b/src/Labs/Lab2/index.css
@@ -229,5 +229,10 @@
             text-align: center;
           }
           
+          .wd-pos-fixed {
+            position: fixed;
+            right: 0px;
+            bottom: 50%;
+            }
           
 
